--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "scripts": {
     "build": "webpack --mode=production",
     "build-profile": "webpack --mode=production --profile",
-    "build-dev": "webpack --mode=development"
+    "build-dev": "webpack --mode=development",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
     "webpack": "^5.24.4",
