--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     "eslint:recommended"
   ],
   "rules": {
-    "no-constant-condition": "off"
+    "no-constant-condition": "off",
+    "no-sparse-arrays": "off"
   },
   "overrides": [
     {
