--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "preact": "^10.4.8"
+    "jszip": "^3.7.1",
+    "preact": "^10.4.8",
+    "punycode": "^2.1.1"
   }
 }
